[gd_scene load_steps=5 format=2]

[ext_resource path="res://Attacks_Abilities/RangedAttack/RangedAttack.gd" type="Script" id=1]
[ext_resource path="res://art/effect spritesheets/magic/5_magickahit_spritesheet.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 65.5, 14.5 )

[sub_resource type="Animation" id=5]
resource_name = "Bolt"
length = 1.4
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath("BoltSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.00627413, 0.0398193, 0.0764154, 0.113011, 0.151219, 0.187009, 0.224411, 0.260201, 0.295992, 0.334406, 0.372526, 0.410647, 0.44973, 0.48785, 0.523866, 0.560752, 0.598484, 0.635551, 0.672619, 0.709686, 0.745791, 0.782053, 0.81912, 0.854576, 0.891644, 0.929517, 0.964167, 0.997206, 1.04481, 1.08954, 1.13069, 1.17005, 1.21478, 1.25414, 1.30423, 1.33822, 1.38474 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38 ]
}

[node name="RangedAttack" type="Area2D"]
collision_layer = 2
collision_mask = 20
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.4
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 15.5, 2.5 )
shape = SubResource( 2 )

[node name="BoltSprite" type="Sprite" parent="."]
position = Vector2( 10.5, 3.75 )
rotation = -1.5708
scale = Vector2( 2, 3 )
texture = ExtResource( 7 )
hframes = 7
vframes = 7
frame = 21

[node name="BoltPlayer" type="AnimationPlayer" parent="."]
playback_speed = 3.0
anims/Bolt = SubResource( 5 )

[connection signal="area_entered" from="." to="." method="_on_RangedAttack_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
